--- a/posts/2025/光学系统设计第二章-初级像差理论.md
+++ b/posts/2025/光学系统设计第二章-初级像差理论.md
@@ -128,3 +128,94 @@ $$P=P_{1}+P_{3}+P_{5}+\dots$$
  由哈密顿方程得出的结论：
  $$\dot{X}=\frac{\partial H}{\partial P}$$
  $$\frac{\partial X}{\partial z}=2P\frac{\partial H}{\partial V}$$
+那么则按照哈密顿量$H$的泰勒展开式，并结合上述公式进行计算可得：
+ $$\dot{X_{1}}=2P_{1}(H_{2}+H_{12}U+H_{22}V+\dots)$$
+ 则有:
+ $$\dot{X_{1}}+\dot{X_{3}}+\dots=2(P_{1}+P_{3}+\dots)(H_{2}+H_{12}U+H_{22}V+\dots)$$
+ 另一方面：
+ $$U=X^{2}+Y^{2}=(X_{1}+X_{3}+\dots)^{2}+(Y_{1}+Y_{3}+\dots)^{2}=U_{1}+2(X_{1}X_{3}+Y_{1}Y_{3})+\dots$$
+ $$V=P^{2}+Q^{2}=(P_{1}+P_{3}+\dots)^{2}+(Q_{1}+Q_{3}+\dots)^{2}=V_{1}+2(P_{1}P_{3}+Q_{1}Q_{3})+\dots$$
+ 将$U$，$V$代入，并令两边同次项相等，则可得到：
+$$
+\begin{aligned}
+\dot{X_{1}} + \dot{X_{3}} + \cdots 
+&= 2(P_{1} + P_{3} + \cdots)\bigg(H_{2} + H_{12}\big(U_{1} + 2(X_{1}X_{3} + Y_{1}Y_{3}) + \cdots\big) + H_{22}\big(V_{1} + 2(P_{1}P_{3} + Q_{1}Q_{3}) + \cdots\big) + \cdots\bigg) \\
+&= 2(P_{1} + P_{3} + \cdots)H_{2} \\
+&\quad + 2(P_{1} + P_{3} + \cdots)H_{12}U_{1} \\
+&\quad + 4(P_{1} + P_{3} + \cdots)H_{12}(X_{1}X_{3} + Y_{1}Y_{3}) \\
+
+&\quad + 2(P_{1} + P_{3} + \cdots)H_{22}V_{1} \\
+&\quad + 4(P_{1} + P_{3} + \cdots)H_{22}(P_{1}P_{3} + Q_{1}Q_{3}) \\
+
+\end{aligned}
+$$
+
+首先分析上式中所含符号的阶数：
+
+| 分量             | 阶数   |
+|------------------|--------|
+| $X_1, P_1$       | 一阶   |
+| $X_3, P_3$       | 三阶   |
+| $U_1 = X_1^2 + Y_1^2$ | 二阶   |
+| $V_1 = P_1^2 + Q_1^2$ | 二阶   |
+| $H_{12}, H_{22}$     | 零阶   |
+
+等式两边同样阶数的项应相等（导数阶数不变，类似微扰理论）
+则有：
+$$
+\begin{aligned}
+\dot{X_{1}} &= 2H_{2}P_{1} \\
+\dot{X_{3}} &= 2H_{2}P_{3} + 2(H_{12}U_{1} + H_{22}V_{1})P_{1} \\
+\dot{P_{1}} &= -2H_{1}X_{1} \\
+\dot{P_{3}} &= -2H_{1}X_{3} - 2(H_{11}U_{1} + H_{12}V_{1})X_{1}
+\end{aligned}
+$$
+同理则有：
+$$
+\begin{aligned}
+\dot{Y}_{1} &= 2 H_{2} Q_{1} \\
+\dot{Y}_{3} &= 2 H_{2} Q_{3} + 2\left(H_{12} U_{1} + H_{22} V_{1}\right) Q_{1} \\
+\dot{Q}_{1} &= -2 H_{1} Y_{1} \\
+\dot{Q}_{3} &= -2 H_{1} Y_{3} - 2\left(H_{11} U_{1} + H_{12} V_{1}\right) Y_{1}
+\end{aligned}
+$$
+
+> **近轴方程：**
+> $$
+\begin{aligned}
+\dot{X_{1}} &= 2H_{2}P_{1} \\
+\dot{P_{1}} &= -2H_{1}X_{1} \\
+\end{aligned}
+$$
+
+> **初级像差方程：**
+> $$
+\begin{aligned}
+\dot{X_{3}} &= 2H_{2}P_{3} + 2(H_{12}U_{1} + H_{22}V_{1})P_{1} \\
+\dot{P_{3}} &= -2H_{1}X_{3} - 2(H_{11}U_{1} + H_{12}V_{1})X_{1}
+\end{aligned}
+$$
+
+### 理论计算像差方法
+ 1.写出折射率方程
+
+ 2.求解$H_{i}$，$H_{ij}$
+
+ 3.求解近轴解；初级像差
+
+ ### 近轴解
+
+ **考虑两条近轴光线：第一近轴光**
+
+ ![示意图](https://picui.cn/thumbnails/36003932deeea17a871e4dad468cc45d.png)
+
+ **轴上物点发出，经过入瞳边缘的光线：**
+
+ 起始坐标：$X_{1}(Z_{0})=0,Y_{1}(Z_{0})=0$
+
+ 瞳面坐标：$X_{1}(\varsigma)=1，Y_{1}(\varsigma)=0$
+
+ 给出解（代表解）：
+ $$X_{1}(z)=g(z)\space ,\space p_{1}(z)=\theta(z)$$
+ 且有：
+ $$g(z_{0})=0\space , \space g(\varsigma)=1$$
