--- a/posts/2025/光学系统设计第二章-初级像差理论.md
+++ b/posts/2025/光学系统设计第二章-初级像差理论.md
@@ -79,7 +79,7 @@ $$H=-\sqrt{n^{2}(U,z)-V}$$
 >$$\dot{x}=\frac{\partial H}{\partial p}=2p\frac{\partial H}{\partial v}=2pH_{2}$$
 >$$\dot{p}=-\frac{\partial H}{\partial x}=-2x\frac{\partial H}{\partial u}=-2xH_{1}$$
 
-$$\frac{\mathrm{d}X}{\mathrm{d}z}=2p\frac{\mathrm{d}H}{\mathrm{d}V}$$
+$$\frac{\mathrm{d}X}{\mathrm{d}z}=2P\frac{\mathrm{d}H}{\mathrm{d}V}$$
 $$\frac{\mathrm{d}P}{\mathrm{d}z}=-2X\frac{\mathrm{d}H}{\mathrm{d}U}$$
 
 
