--- a/posts/2025/光学系统设计第二章-初级像差理论.md
+++ b/posts/2025/光学系统设计第二章-初级像差理论.md
@@ -204,18 +204,44 @@ $$
  3.求解近轴解；初级像差
 
  ### 近轴解
-
- **考虑两条近轴光线：第一近轴光**
+ - **考虑两条近轴光线：第一近轴光**
 
  ![示意图](https://picui.cn/thumbnails/36003932deeea17a871e4dad468cc45d.png)
 
  **轴上物点发出，经过入瞳边缘的光线：**
 
- 起始坐标：$X_{1}(Z_{0})=0,Y_{1}(Z_{0})=0$
+ 起始坐标：$X_{1}(Z_{0})=0\space,\space Y_{1}(Z_{0})=0$
 
- 瞳面坐标：$X_{1}(\varsigma)=1，Y_{1}(\varsigma)=0$
+ 瞳面坐标：$X_{1}(\varsigma)=1\space,\space Y_{1}(\varsigma)=0$
 
  给出解（代表解）：
- $$X_{1}(z)=g(z)\space ,\space p_{1}(z)=\theta(z)$$
- 且有：
- $$g(z_{0})=0\space , \space g(\varsigma)=1$$
+ $$\boxed{X_{1}(z)=g(z)\space ,\space p_{1}(z)=\theta(z)}$$
+ 且有边界条件：
+ $$\boxed{g(z_{0})=0\space , \space g(\varsigma)=1}$$
+
+ - **考虑两条近轴光线：第二近轴光**
+
+ ![示意图](https://picui.cn/thumbnails/36003932deeea17a871e4dad468cc45d.png)
+
+ **轴外物点发出，经过入瞳中心的光线：**
+
+ 起始坐标：$X_{1}(z_{0})=1\space,\space Y_{1}(z_{0})=0$
+
+ 瞳面坐标：$X_{1}(\varsigma)=0\space,\space Y_{1}(\varsigma)=0$
+
+ 给出解（代表解）：
+ $$\boxed{X_{1}(z)=G(z)\space , \space P_{1}(z)=\Theta(z)}$$
+ 且有边界条件：
+ $$\boxed{G(z_{0})=1 \space , \space G(\varsigma)=0}$$
+::: danger
+  **$g(z),G(z),\theta(z),\Theta(z)$是近轴方程组两个线性独立的解，其他解均可以表示为这两个解的线性组合。**
+:::
+ 现在考虑近轴解中的**一般情况：**
+
+ 起始坐标：$(x_{0},y_{0})$
+
+ 瞳面坐标：$(\xi ,\eta)$
+
+ 则近轴解为：
+ $$\boxed{X_{1}(z)=x_{0}G(z)+\xi g(z)}$$
+ $$\boxed{Y_{1}(z)=y_{0}G(z)+\eta g(z) }$$
