--- a/posts/2025/光学系统设计第二章-初级像差理论.md
+++ b/posts/2025/光学系统设计第二章-初级像差理论.md
@@ -1,5 +1,5 @@
 ---
-title: 光学系统设计第二章-初级像差理论
+title: 光学系统设计第二章①-初级像差理论
 tags: [Zemax]
 categories: [光学设计基础]
 date: 2025-8-7
@@ -236,7 +236,7 @@ $$
 ::: danger
   **$g(z),G(z),\theta(z),\Theta(z)$是近轴方程组两个线性独立的解，其他解均可以表示为这两个解的线性组合。**
 :::
- 现在考虑近轴解中的**一般情况：**
+  现在考虑近轴解中的**一般情况：**
 
  起始坐标：$(x_{0},y_{0})$
 
@@ -245,3 +245,188 @@ $$
  则近轴解为：
  $$\boxed{X_{1}(z)=x_{0}G(z)+\xi g(z)}$$
  $$\boxed{Y_{1}(z)=y_{0}G(z)+\eta g(z) }$$
+
+ 另外，$g(z),G(z),\theta(z),\Theta(z)$依旧满足哈密顿方程中推导的关系式：
+ >由于旋转对称性，可以先研究关于$x$与$p$的方程，同理可得$y$与$q$的方程。
+>$$
+\because
+\left\{
+\begin{array}{l}
+\begin{aligned}
+\frac{\partial u}{\partial x}=2x\\
+\frac{\partial v}{\partial p}=2p
+\end{aligned}
+\end{array}
+\right.
+>$$
+>$$
+\therefore
+\left\{
+\begin{array}{l}
+\begin{aligned}
+\frac{\partial }{\partial x}=2x\frac{\partial}{\partial u}\\
+\space \\
+\frac{\partial }{\partial p}=2p\frac{\partial}{\partial p}
+\end{aligned}
+\end{array}
+\right.
+>$$
+>由前一节的哈密顿方程得到的结论：
+>$$
+\left\{
+\begin{array}{l}
+\begin{aligned}
+\frac{\partial H}{\partial p} &= \dot{x} \\
+\frac{\partial H}{\partial q} &= \dot{y} \\
+\frac{\partial H}{\partial x} &= -\dot{p} \\
+\frac{\partial H}{\partial y} &= -\dot{q} \\
+\frac{\partial H}{\partial z} &= -\frac{\partial L}{\partial z}
+\end{aligned}
+\end{array}
+\right.
+>$$
+>则可得到：
+>$$\dot{x}=\frac{\partial H}{\partial p}=2p\frac{\partial H}{\partial v}=2pH_{2}$$
+>$$\dot{p}=-\frac{\partial H}{\partial x}=-2x\frac{\partial H}{\partial u}=-2xH_{1}$$
+
+故而有：
+
+$$\begin{align*}
+\frac{\mathrm{d}g}{\mathrm{d}z} &= 2\theta H_{2} \\
+\frac{\mathrm{d}\theta}{\mathrm{d}z} &= -2g H_{1} \\
+\frac{\mathrm{d}G}{\mathrm{d}z} &= 2\Theta H_{2} \\
+\frac{\mathrm{d}\Theta}{\mathrm{d}z} &= -2G H_{1}
+\end{align*}
+$$
+
+于是，根据$X_{1}(z)$，$Y_{1}(z)$的表达式结合哈密顿方程得到的关系可得到$P_{1}(z)$，$Q_{1}(z)$的表达式：
+$$P_{1}(z)=\frac{1}{2H_{2}}\dot{X_{1}}=\frac{1}{2H_{2}}\Big(x_{0}\dot{G}(z)+\xi\dot{\theta}(z)\Big)=x_{0}\Theta(z)+\xi \theta(z)$$
+同理，
+$$Q_{1}(z)=y_{0}\Theta(z)+\eta \theta(z)$$
+
+**综上所述；**
+$$X_{1}(z)=x_{0}G(z)+\xi g(z)$$
+$$P_{1}(z)=x_{0}\Theta(z)+\xi \theta(z)$$
+$$Y_{1}(z)=y_{0}G(z)+\eta g(z)$$
+$$Q_{1}(z)=y_{0}\Theta(z)+\eta \theta(z)$$
+
+
+
+### 初级像差（$X_{3}$）
+
+设$z=z_{0}$处轴上点发出理想光线，用$g(z)$表示，两条光线(一条第一近轴光，另一条为沿光轴的光)交点为高斯像点，设高斯像点位于$z=z_{1}$处。显然：
+$$g(z_{1})=0,z_{1}\neq z_{0}$$
+因此在高斯像面上有：
+$$X_{1}(z_{1})=x_{0}G(z_{1})$$
+$X_{1}(z_{1})$与$\xi$，$\eta$无关，$G$其实就是放大率。
+
+现在研究初级像差，考虑这样一条光线：
+
+起始坐标：$(x_{0},y_{0},z_{0})$
+
+瞳面坐标：$(\xi\space,\space\eta\space,\space\zeta)$
+
+边界条件：
+
+$$
+\boxed{
+\begin{aligned}
+X_{1}(z_{0}) &= x_{0}, & Y_{1}(z_{0}) &= y_{0} \\
+X_{1}(z_{1}) &= \xi,   & Y_{1}(z_{1}) &= \eta
+\end{aligned}
+}
+$$
+
+又根据哈密顿方程有：
+$$\begin{align*}
+\frac{\mathrm{d}g}{\mathrm{d}z} &= 2\theta H_{2} \\
+\frac{\mathrm{d}\theta}{\mathrm{d}z} &= -2g H_{1} \\
+\frac{\mathrm{d}G}{\mathrm{d}z} &= 2\Theta H_{2} \\
+\frac{\mathrm{d}\Theta}{\mathrm{d}z} &= -2G H_{1}
+\end{align*}
+$$
+可得：
+$$
+\begin{align*}
+2H_{2} &= \frac{\dot{g}}{\theta} \\
+2H_{1} &= -\frac{\dot{\theta}}{g}
+\end{align*}
+$$
+结合初级像差方程：
+$$
+\begin{aligned}
+\dot{X_{1}} &= 2H_{2}P_{1} \\
+\dot{X_{3}} &= 2H_{2}P_{3} + 2(H_{12}U_{1} + H_{22}V_{1})P_{1} \\
+\dot{P_{1}} &= -2H_{1}X_{1} \\
+\dot{P_{3}} &= -2H_{1}X_{3} - 2(H_{11}U_{1} + H_{12}V_{1})X_{1}
+\end{aligned}
+$$
+
+则可得到：
+$$
+\boxed{
+\begin{aligned}
+\dot{X_{3}} &= 2H_{2}P_{3} + 2(H_{12}U_{1} + H_{22}V_{1})P_{1}\\
+&=\frac{\dot{g}}{\theta} P_{3} + 2(H_{12}U_{1} + H_{22}V_{1})P_{1}
+\end{aligned}}
+$$
+
+$$
+\boxed{
+\begin{aligned}
+\dot{P_{3}} &= -2H_{1}X_{3} - 2(H_{11}U_{1} + H_{12}V_{1})X_{1}\\
+&=\frac{\dot{\theta}}{g}X_{3} - 2(H_{11}U_{1} + H_{12}V_{1})X_{1}
+\end{aligned}}
+$$
+
+即：
+
+$$
+\boxed{
+\begin{aligned}
+&\dot{X_{3}}\theta - \dot{g}P_{3} = 2(H_{12}U_{1} + H_{22}V_{1})P_{1}\theta \\
+&X_{3}\dot{\theta} - g\dot{P_{3}} = 2(H_{11}U_{1} + H_{12}V_{1})X_{1}g
+\end{aligned}
+}
+$$
+
+观察上式，两个式子左边相加其实就是$(X_{3}\theta-gP_{3})$对$z$求导的结果，因此有：
+$$\frac{\mathrm{d}}{\mathrm{d}z}(X_{3}\theta-gP_{3})=2\bigg[(H_{12}U_{1} + H_{22}V_{1})P_{1}\theta+2(H_{11}U_{1} + H_{12}V_{1})X_{1}g\bigg]$$
+将上式从物面到像面进行积分：
+$$(X_{3}\theta-gP_{3})\bigg|^{z_{1}}_{z_{0}}=2\int^{z_{1}}_{z_{0}}\bigg[(H_{12}U_{1} + H_{22}V_{1})P_{1}\theta+2(H_{11}U_{1} + H_{12}V_{1})X_{1}g\bigg]\mathrm{d}z$$
+利用 ${g(z_{0})=0}$, ${X_{3}(z_{0})=0}$, ${g(z_{1})=0}$ 得**像面上沿$x$方向的像差**：
+
+
+$$
+X_{3}(z_{1}) = \frac{2}{\theta(z_{1})} \int_{z_{0}}^{z_{1}} 
+\biggl[
+(H_{12} U_{1} + H_{22} V_{1}) P_{1}\theta + 
+(H_{11} U_{1} + H_{12} V_{1}) X_{1} g
+\biggr] \mathrm{d} z
+$$
+
+同理可得**像面上沿$y$方向的像差**:
+$$Y_{3}(z_{1}) = \frac{2}{\theta(z_{1})} \int_{z_{0}}^{z_{1}} 
+\biggl[
+(H_{12} U_{1} + H_{22} V_{1}) Q_{1}\theta + 
+(H_{11} U_{1} + H_{12} V_{1}) Y_{1} g
+\biggr] \mathrm{d} z$$
+
+又因为：
+$$U_{1} = X_{1}^{2} + Y_{1}^{2} = \bigl[x_{0} G(z) + \xi g(z)\bigr]^{2} + 
+\bigl[y_{0} G(z) + \eta g(z)\bigr]^{2} = rG^{2} + 2tGg + sg^{2}$$
+这里 
+$$r = x_{0}^{2} + y_{0}^{2}$$
+$$t = x_{0}\xi + y_{0}\eta$$
+$$s = \xi^{2} + \eta^{2}$$
+
+同样：
+$$V_{1} = P_{1}^{2} + Q_{1}^{2} = r\Theta^{2} + 2t\Theta\theta + s\theta^{2}$$
+代入积分式可得：
+$$\begin{cases} 
+X_{3}(z_{1}) = \bigg[As + 2Bt + (C+D)r\bigg]\xi + \bigg[Bs + 2Ct + Er\bigg]x_{0} \\ 
+\space \\
+Y_{3}(z_{1}) = \bigg[As + 2Bt + (C+D)r\bigg]\eta + \bigg[Bs + 2Ct + Er\bigg]y_{0} 
+\end{cases}$$
+
+$A$，$B$，$C$，$D$，$E$为像差系数。
