--- a/posts/2025/光学系统设计第二章-初级像差理论.md
+++ b/posts/2025/光学系统设计第二章-初级像差理论.md
@@ -430,3 +430,24 @@ Y_{3}(z_{1}) = \bigg[As + 2Bt + (C+D)r\bigg]\eta + \bigg[Bs + 2Ct + Er\bigg]y_{0
 \end{cases}$$
 
 $A$，$B$，$C$，$D$，$E$为像差系数。
+$$
+\begin{aligned}
+& A=\dfrac{2}{\theta\left(z_{1}\right)}\int_{z_{1}}^{z_{2}}\left[H_{11} g^{4}+2H_{12} g^{2}\theta^{2}+H_{22}\theta^{4}\right]\mathrm{d}z \\
+& B=\dfrac{2}{\theta\left(z_{1}\right)}\int_{z_{1}}^{z_{2}}\left[H_{12} Gg^{3}+H_{12}g\theta(g\Theta+G\theta)+H_{22}\Theta\theta^{3}\right]\mathrm{d}z \\
+& C=\dfrac{2}{\theta\left(z_{1}\right)}\int_{z_{1}}^{z_{2}}\left[H_{11} G^{2}g^{2}+2H_{12} Gg\Theta\theta+H_{22}\Theta^{2}\theta^{2}\right]\mathrm{d}z \\
+& D=\dfrac{2}{\theta\left(z_{1}\right)}\Gamma^{2}\int_{z_{1}}^{z_{2}} H_{12}\mathrm{d}z \\
+& E=\dfrac{2}{\theta\left(z_{1}\right)}\int_{z_{1}}^{z_{2}}\left[H_{11} G^{3}g+H_{12} G\Theta(g\Theta+G\theta)+H_{22}\Theta^{3}\theta\right]\mathrm{d}z 
+\end{aligned}
+$$
+
+其中，  
+$$ \Gamma=G\theta-g\Theta $$  
+
+$z=z_{0}$ 点  
+$$ \Gamma=nX_{1}(z_{0})u-0 $$  
+
+$z=z_{1}$ 点  
+$$ \Gamma=n^{\prime}X_{1}(z_{1})u^{\prime}-0 $$
+
+在其他各点：
+$$ \frac{\mathrm{d} \Gamma}{\mathrm{d}  z}=G \dot{\theta}+G \ddot{\theta}-g \dot{\Theta}-g \dot{\Theta}=2H_{2} \Theta \theta+G(-2H_{1} g)-2H_{2} \Theta \theta-g(-2 H_{1} G)=0 $$  
