--- a/posts/2025/光学系统设计第一章②-程函方程式、波动光学与几何光学的联系.md
+++ b/posts/2025/光学系统设计第一章②-程函方程式、波动光学与几何光学的联系.md
@@ -1,7 +1,7 @@
 ---
 title: 光学系统设计第一章②-程函方程式、波动光学与几何光学的联系
-tags: [Zemax]
-categories: [光学设计基础]
+tags: [光学系统设计]
+categories: [光学设计理论基础]
 date: 2025-8-5
 description: 本笔记参考浙江大学-李晓彤老师-光学系统设计课程
 articleGPT: 这是光学系统设计第一章第二部分笔记，主要介绍程函方程式、波动光学与几何光学的联系。
