--- a/posts/2025/光学系统设计第二章②初级像差及其光束结构.md
+++ b/posts/2025/光学系统设计第二章②初级像差及其光束结构.md
@@ -1,8 +1,8 @@
 ---
-title: 光学系统设计第二章①-初级像差理论
+title: 光学系统设计第二章②-初级像差及其光束结构
 tags: [光学系统设计]
 categories: [光学设计理论基础]
-date: 2025-8-7
+date: 2025-8-12
 description: 本笔记参考浙江大学-李晓彤老师-光学系统设计课程
 articleGPT: 这是光学系统设计第二章笔记，本章目的是利用哈密顿表述，导出旋转对称光学系统的像差表达式。理解初级像差的概念、现象、与孔径视场的关系。
 references:
