--- a/posts/2025/光学系统设计第一章①-费马原理与高斯光学.md
+++ b/posts/2025/光学系统设计第一章①-费马原理与高斯光学.md
@@ -1,7 +1,7 @@
 ---
 title: 光学系统设计第一章①-费马原理三种表述与高斯光学
 tags: [光学系统设计]
-categories: [光学设计理论基础]
+categories: [光设理论基础]
 date: 2025-7-31
 description: 本笔记参考浙江大学-李晓彤老师-光学系统设计课程
 articleGPT: 这是光学系统设计第一章笔记，主要介绍费马原理、拉格朗日表述、哈密顿表述与高斯光学，是光学系统设计的理论基础
