--- a/posts/2025/光学系统设计第二章②初级像差及其光束结构.md
+++ b/posts/2025/光学系统设计第二章②初级像差及其光束结构.md
@@ -2,7 +2,7 @@
 title: 光学系统设计第二章②-初级像差及其光束结构
 tags: [光学系统设计]
 categories: [光设理论基础]
-date: 2025-8-12
+date: 2025-8-28
 description: 本笔记参考浙江大学-李晓彤老师-光学系统设计课程
 articleGPT: 这是光学系统设计第二章笔记，本章目的是利用哈密顿表述，导出旋转对称光学系统的像差表达式。理解初级像差的概念、现象、与孔径视场的关系。
 references:
@@ -25,14 +25,17 @@ references:
 
 本章目的是利用哈密顿表述，导出旋转对称光学系统的像差表达式。理解初级像差的概念、现象、与孔径视场的关系。
 
+
 ## 建立模型
 
-设系统**旋转对称**，**物点位于$x$轴**，坐标为$(x_{0},0,z_{0})$，**并且$z=\zeta$ 为出瞳面**。
+[![模型示意图](https://free.picui.cn/free/2025/08/19/68a3e6753d079.png)](https://free.picui.cn/free/2025/08/19/68a3e6753d079.png)
+
+设系统**旋转对称**，**物点位于$x$轴**，坐标为$(x_{0},0,z_{0})$，**并且$z=\zeta$ 为出瞳面，$z=z_{1}$为近轴像面**。
 
 考虑物点发出并投到出瞳面上某一环带的光线，设**其到z轴的距离为$\rho$**
 
 则其中一条光线的横纵坐标可以使用极坐标表示出来：
-$$\zeta=\rho \cos \varphi$$
+$$\xi=\rho \cos \varphi$$
 $$\eta=\rho \sin \varphi$$
 
 结合初级像差理论推导得到的公式：
@@ -51,31 +54,203 @@ Y_{3}(z_{1}) = \bigg[As + 2Bt + (C+D)r\bigg]\eta + \bigg[Bs + 2Ct + Er\bigg]y_{0
 \end{cases}$$
 于是可得：
 $$
+\boxed{
 \begin{align*}
     r &= x_{0}^{2} \\
     t &= x_{0} \rho \cos \varphi \\
     s &= \rho^{2}
 \end{align*}
+}
 $$
 
 $$
+\boxed{
 \begin{cases} 
 X_{3} &= A\rho^{3}\cos\varphi + B x_{0}\rho^{2}(2+\cos 2\varphi) + (3C + D)x_{0}^{2}\rho\cos\varphi + E x_{0}^{3} \\
 Y_{3} &= A\rho^{3}\sin\varphi + B x_{0}\rho^{2}\sin 2\varphi + (C + D) x_{0}^{2}\rho\sin\varphi
 \end{cases}
+}
 $$
 观察上述两式中的单个项，**发现和$\rho$孔径、$x_{0}$视场的某次方有关**。
 > 注意，$Y_{3}$相比$X_{3}$缺了最后一项，原因是模型建立时选择的物面发光点坐标取$y_{0}=0$，因此少一项。
 
 ## 球差
 
-**若$A$不为0，$B$，$C$，$D$，$E$均为0。**
+[![示意图](https://free.picui.cn/free/2025/08/19/68a480a52b493.png)](https://free.picui.cn/free/2025/08/19/68a480a52b493.png)
 
-此时
+
+**当$x_{0}=0$时**，根据初级像差原始公式可知：
+
 $$
+\boxed{
+\begin{cases} 
+X_{3} &= A\rho^{3}\cos\varphi + B x_{0}\rho^{2}(2+\cos 2\varphi) + (3C + D)x_{0}^{2}\rho\cos\varphi + E x_{0}^{3} \\
+Y_{3} &= A\rho^{3}\sin\varphi + B x_{0}\rho^{2}\sin 2\varphi + (C + D) x_{0}^{2}\rho\sin\varphi
+\end{cases}
+}
+$$
+
+**此时若$A$不为0，则初级像差表达式变为：**
+
+$$
+\boxed{
 \begin{cases}
 X_{3}&=A\rho^{3}\cos\varphi\\
 \space \\
 Y_{3} &= A\rho^{3}\sin\varphi 
 \end{cases}
+}
 $$
+
+则有：
+
+$$\boxed{X_{3}^{2}+Y_{3}^{2}=(A\rho^{3})^{2}}$$
+
+说明**轴上点射到出瞳面上离$z$轴为$\rho$的光线，将与像平面相交于以近轴像点为圆心，以$A\rho^{3}$为半径的圆周上。**
+
+换一种表述，**从同一轴上点发出的不同孔径的光线会在像平面上形成以近轴像点为圆心，半径不同的弥散斑。**
+
+[![球差光斑示意图](https://free.picui.cn/free/2025/08/19/68a479ccc27de.png)](https://free.picui.cn/free/2025/08/19/68a479ccc27de.png)
+
+轴向球差：
+$$\frac{A\rho^{3}}{\rho}=\frac{\delta L'}{d-\delta L'}$$
+
+## 慧差
+
+**当$x_{0}$很小时，$x_{0}$的一次项不可忽略，其余高阶项可以忽略**，则根据初级像差原始公式可知：
+$$
+\boxed{
+\begin{cases} 
+X_{3} &= A\rho^{3}\cos\varphi + B x_{0}\rho^{2}(2+\cos 2\varphi) + (3C + D)x_{0}^{2}\rho\cos\varphi + E x_{0}^{3} \\
+Y_{3} &= A\rho^{3}\sin\varphi + B x_{0}\rho^{2}\sin 2\varphi + (C + D) x_{0}^{2}\rho\sin\varphi
+\end{cases}
+}
+$$
+
+初级像差公式变为：
+$$
+\boxed{
+\begin{cases} 
+X_{3} &= A\rho^{3}\cos\varphi + B x_{0}\rho^{2}(2+\cos 2\varphi)  \\
+Y_{3} &= A\rho^{3}\sin\varphi + B x_{0}\rho^{2}\sin 2\varphi 
+\end{cases}
+}
+$$
+略去球差，假设只有含$B$的像差，则有：
+$$
+\boxed{
+\begin{cases} 
+X_{3} &=B x_{0}\rho^{2}(2+\cos 2\varphi)  \\
+Y_{3} &= B x_{0}\rho^{2}\sin 2\varphi 
+\end{cases}
+}
+$$
+
+消去$\varphi$可得：
+$$(X_{3}-2Bx_{0}\rho^{2})^{2}+Y_{3}^{2}=(Bx_{0}\rho^{2})^{2}$$
+
+从上式可以看出，**慧差的形状为：圆心离近轴像点为$2Bx_{0}\rho^{2}$，半径为$Bx_{0}\rho^{2}$的圆。**
+
+>**结论**：
+> 
+> - $\varphi$相差为$\pi$的光线在圆上（近轴像面）相交与一点。
+> [![屏幕截图 2025-08-28 104231.png](https://free.picui.cn/free/2025/08/28/68afc2ca9faa3.png)](https://free.picui.cn/free/2025/08/28/68afc2ca9faa3.png)
+>
+> - $\rho$由零增大时，圆心到理想像点的距离增大，圆半径也增大，但**这些圆有公共切线**。
+>
+>   设任一圆的切线与x轴夹角为$\theta$，则：
+> $$\sin \theta = \frac{Bx_{0}\rho^{2}}{2Bx_{0}\rho^{2}}=\frac{1}{2}$$
+> 即慧差的圆形被限制在夹角为60°的两条直线内，任一$x_{0}$的像**具有彗星状的弥散斑**
+
+[![慧差光斑示意图](https://free.picui.cn/free/2025/08/28/68afc65d6bf36.png)](https://free.picui.cn/free/2025/08/28/68afc65d6bf36.png)
+
+## 像散与像面弯曲
+
+设$x_{0} \neq 0$，且设只有$C$与$D$非零，则根据初级像差原始公式可知：
+$$
+\boxed{
+\begin{cases} 
+X_{3} &= A\rho^{3}\cos\varphi + B x_{0}\rho^{2}(2+\cos 2\varphi) + (3C + D)x_{0}^{2}\rho\cos\varphi + E x_{0}^{3} \\
+Y_{3} &= A\rho^{3}\sin\varphi + B x_{0}\rho^{2}\sin 2\varphi + (C + D) x_{0}^{2}\rho\sin\varphi
+\end{cases}
+}
+$$
+
+当只有$C$与$D$非零时，初级像差公式变为：
+$$
+\boxed{
+\begin{cases} 
+X_{3} &= (3C + D)x_{0}^{2}\rho\cos\varphi \\
+Y_{3} &= (C + D) x_{0}^{2}\rho\sin\varphi
+\end{cases}
+}
+$$
+对上式做处理消去$\varphi$可得：
+$$\boxed{\frac{X_{3}^{2}}{\big[(3C+D)x_{0}^{2}\rho\big]^{2}}+\frac{Y_{3}^{2}}{\big[(C+D)x_{0}^{2}\rho\big]^{2}}=1}$$
+
+从上式可以看出，**给定$\rho$值的光线会与近轴像面交得一个椭圆，高斯像点是其中心**。
+
+对于任意平行于高斯像面的平面，考虑其上的光斑，设出瞳到像面的空间均匀，则根据下图并结合相似三角形可得：
+
+[![任意平行于高斯像面的平面](https://free.picui.cn/free/2025/08/28/68afce7744b41.png)](https://free.picui.cn/free/2025/08/28/68afce7744b41.png)
+
+$$\frac{\bar x-\xi}{X-\xi}=\frac{d+z}{d}$$
+即：
+$$\bar x=-\frac{z}{d}\xi+(1+\frac{z}{d})X$$
+又:
+$$X=X_{1}+X_{3}=X_{1}+(3C+D)x_{0}^{2}\xi$$
+则有：
+$$\boxed{\bar x=(1+\frac{z}{d})X_{1}+\bigg[-\frac{z}{d}+(1+\frac{z}{d})(3C+D)x_{0}^{2}\bigg]\xi}$$
+
+同理：
+$$\boxed{\bar y=\bigg[-\frac{z}{d}+(1+\frac{z}{d}(C+D)x_{0}^{2})\bigg]\eta}$$
+
+又，
+$$\xi^{2}+\eta^{2}=\rho^{2}$$
+所以，
+
+
+$$ \frac{\left[\bar{x}-\dfrac{d+z}{d} X_{1}\right]^{2}}{\left[-\dfrac{z}{d}+\dfrac{d+z}{d}(3 C+D)x_{0}^{2}\right]^{2}}+\frac{\bar{y}^{2}}{\left[-\dfrac{z}{d}+\dfrac{d+z}{d}(C+D) x_{0}^{2}\right]^{2}}=\rho^{2} $$
+
+> **结论：**
+>  
+> - 由出瞳面上半径为 $\rho$ 的环带射出的光线，在离高斯面为 $-z$ 处的平面上形成一个以点 $\left( \dfrac{d+z}{d}X_{x},0 \right)$ 为中心的椭圆。
+> - 设长轴为零处为 $z=z_{T}$，解得 $z_{T}\approx(3C+D)x_{o}^{2}d$（子午像面弯曲）。  **椭圆退化为沿 $y$ 方向的一条直线，即子午焦线**。
+> 
+> - 设短轴为零处为 $z=z_{S}$，解得 $z_{S}\approx(C+D)x_{o}^{2}d$（弧矢像面弯曲）。  **椭圆退化为沿 $y$ 方向的一条直线，即弧矢焦线**。
+> 
+> - 两焦线的距离 $z_{T}-z_{S}=2Cx_{o}^{2}d$（**像散**），$C$ 表征像散。
+>
+> - 当$C=0$时，椭圆退化为一个圆，这时在$z\approx Dx_{0}^{2}d$处得到一个点，即**匹兹凡面弯曲**。
+>
+> - 当$C\neq 0$时，令长短轴相等，亦得到一个圆，此时$z=(2C+D)x_{0}^{2}d$，即最小弥散圆。
+>
+> - 若$D=0$，则$z_{T}=3z_{S}$。
+
+[![像散与像面弯曲示意图](https://free.picui.cn/free/2025/08/28/68b02cd19e7aa.png)](https://free.picui.cn/free/2025/08/28/68b02cd19e7aa.png)
+
+## 畸变
+
+设$A=B=C=D=0,E\neq 0$，则根据初级像差原始公式可知：
+$$
+\boxed{
+\begin{cases} 
+X_{3} &= A\rho^{3}\cos\varphi + B x_{0}\rho^{2}(2+\cos 2\varphi) + (3C + D)x_{0}^{2}\rho\cos\varphi + E x_{0}^{3} \\
+Y_{3} &= A\rho^{3}\sin\varphi + B x_{0}\rho^{2}\sin 2\varphi + (C + D) x_{0}^{2}\rho\sin\varphi
+\end{cases}
+}
+$$
+此时初级像差公式表示为：
+$$
+\boxed{
+\begin{cases} 
+X_{3} &= E x_{0}^{3} \\
+Y_{3} &=0
+\end{cases}
+}
+$$
+根据上述公式，结合$E$的正负，并考虑系统的旋转对称性，可知畸变的效果如下：
+
+[![畸变效果示意图](https://free.picui.cn/free/2025/08/28/68b0522333dfb.png)](https://free.picui.cn/free/2025/08/28/68b0522333dfb.png)
+
+
