--- a/posts/2025/全景环带光学系统—面临的挑战与设计参数.md
+++ b/posts/2025/全景环带光学系统—面临的挑战与设计参数.md
@@ -13,6 +13,17 @@ references:
    
 ---
 
+> **参考文献：**  
+> Review on panoramic imaging and its applications in scene understanding
+>
+> **期刊：**\
+> IEEE Transactions on Instrumentation and Measurement, vol. 71, pp. 1-34, 2022 
+>
+> **作者：**\
+> S. Gao, K. Yang, H. Shi, K. Wang, J. Bai
+> 
+> **链接**\
+>  https://ieeexplore.ieee.org/document/9927463
 
 
 # 全景环带光学系统设计参数
@@ -53,7 +64,7 @@ $$\boxed{360° \times (\text{half FoV})}$$
 
 全景环带光学系统通常拥有更大的FoV，因此相比其他普通FoV的光学系统来说，**具有更多的环境感知优势，同一时间感受到的信息更多。**
 
-## *wavelength* 波长
+### *wavelength* 波长
 
 [![电磁波谱](https://free.picui.cn/free/2025/09/27/68d7586b15f3d.png)](https://free.picui.cn/free/2025/09/27/68d7586b15f3d.png)
 
@@ -62,16 +73,16 @@ $$\boxed{360° \times (\text{half FoV})}$$
 
 **可见光波长是设计全景成像光学系统最常见的范围**。为了扩展人类对周围环境的感知能力，**紫外和红外全景成像系统应运而生，以实现超越人类可见光谱波长的更宽光谱的环境感知。**
 
-## *F-Number* F数
+### *F-Number* F数
 
-### 定义
+#### 定义
 
 *F-Number*被定义为系统焦距与入瞳直径的比率。即：
 
 $$\text{F-nNumber}=\frac{EFL}{EPD}$$
 
 
-### 小*F-Nubmer*光学系统
+#### 小*F-Nubmer*光学系统
 
 - *F-Number*越小，证明系统的入瞳直径相对越大，同一时刻系统的进光量就越大。**同样速度也越快。**
 - 
@@ -88,13 +99,13 @@ $$\text{F-nNumber}=\frac{EFL}{EPD}$$
 
 *F-Number*较小的光学系统设计难度较大。然而，它通常具有较高的成像质量。**因此，全景系统的*F-Number*通常被设计得足够小，以实现较大的光通量和优异的成像质量。**
 
-## *focal length*焦距
+### *focal length*焦距
 
-### 定义
+#### 定义
 
 即光学系统原点到焦点的距离。
 
-### 五大投影方式
+#### 五大投影方式
 
 | 编号 | 英文名称                   | 中文名称         | 投影公式                                     | 特点说明                                               |
 |------|----------------------------|------------------|----------------------------------------------|--------------------------------------------------------|
@@ -106,7 +117,7 @@ $$\text{F-nNumber}=\frac{EFL}{EPD}$$
 
 **全景环带光学系统**则通常使用**等距投影模式。**
 
-### 传感器选择
+#### 传感器选择
 
 
 [![两种传感器接法](https://free.picui.cn/free/2025/09/27/68d78199a1ce4.png)](https://free.picui.cn/free/2025/09/27/68d78199a1ce4.png)
@@ -118,9 +129,9 @@ $$\text{F-nNumber}=\frac{EFL}{EPD}$$
 
 **全景环带传感器采用内接圆设计，不损失视场，但是损失传感器边缘像元。**
 
-## *resolution*
+### *resolution*
 
-### 定义
+#### 定义
 
 分辨率一般指的是测量或者显示系统分辨细节的能力。
 
@@ -128,7 +139,7 @@ $$\text{F-nNumber}=\frac{EFL}{EPD}$$
 
 对于光学系统而言，**光学分辨率与波长和光阑孔径大小有关。** 具体来说，波长越短、光阑孔径越大，光学系统(在大系统像差校正的情况下)的分辨率越高。
 
-## *imaging quality*
+### *imaging quality*
 
 全景光学系统的成像质量并不是单一的评价标准。
 
@@ -136,7 +147,7 @@ $$\text{F-nNumber}=\frac{EFL}{EPD}$$
 
 光学系统在设计过程中需要遵循像差设计理论对像差进行校正，**最终的设计需要满足每个FoVs的均匀相对照度。全景光学系统的照明也需要尽可能均匀，畸变要尽可能小，以满足感知精度要求**
 
-## *volume*
+### *volume*
 
 **小型化、轻量化的全景光学系统将适用于更多的空间和约束权函数场景。** 对于全景环带光学系统来说，为了便于表征和比较全景系统的紧凑度，一种较好的方法是采用紧凑度比作为体积紧凑度参数。
 
