--- a/posts/2025/全景环带光学系统—面临的挑战与设计参数.md
+++ b/posts/2025/全景环带光学系统—面临的挑战与设计参数.md
@@ -30,9 +30,9 @@ references:
 
 ## 全景环带光学系统设计的挑战及其发展方向
 
-性能方面，为了满足机器视觉等应用的要求，全景成像面临着几个共同的挑战，**包括FoV、分辨率、无盲区和成像质量等**。
+为了满足机器视觉等应用的要求，全景成像面临着几个共同的挑战，**包括FoV、分辨率、无盲区和成像质量等**。
 
-另一个迫切的需求是多维智能感知，其中**全景成像有望与智能传感器相结合，记录、融合和感知周围环境的更高维信息。**
+另一个迫切的需求是多维智能感知，其中**全景成像有望与智能传感器相结合，融合和感知周围环境的更高维信息。**
 
 此外，全景成像有望**向轻量化和小体积的结构形式发展**，以适用于更多空间和约束权函数场景的应用。
 
