Revise title and enhance content on imaging principles
Updated the title and date, and added sections on imaging principles and challenges in panoramic optical systems.

--- a/posts/2025/全景环带光学系统—面临的挑战与设计参数.md
+++ b/posts/2025/全景环带光学系统—面临的挑战与设计参数.md
@@ -1,8 +1,8 @@
 ---
-title: 全景环带光学系统设计参数
+title: 全景环带光学系统原理
 tags: [基础理论]
 categories: [全景环带光学系统]
-date: 2025-9-27
+date: 2025-10-17
 description: 本笔记参考 Review on panoramic imaging and its applications in scene understanding
 articleGPT: 主要介绍全景环带光学系统的几个设计参数，同样这些参数的提升或减小也是全景环带光学系统未来设计的创新点。
 references:
@@ -13,7 +13,7 @@ references:
    
 ---
 
-# 全景环带光学系统设计参数
+# 全景环带光学系统原理
 
 > **参考文献：**  
 > Review on panoramic imaging and its applications in scene understanding
@@ -28,6 +28,50 @@ references:
 >  https://ieeexplore.ieee.org/document/9927463
 
 
+> **参考文献：**  
+> 昼夜型全景监控光学系统设计
+>
+> **作者：**\
+> 王晓檬 长春理工大学
+> 
+> **链接：**\
+>  https://doi.org/10.26977/d.cnki.gccgc.2023.000717
+
+## 全景环带光学系统成像原理
+
+### 全景环带光学系统组成
+
+全景环带光学系统主要包含三部分，PAL块（PAL block）、中继透镜组（relay lens group）以及传感器（sensor）。
+$$\text{PAL system} \left \{
+ \begin{align*}
+    &\text{PAL block}\\
+    &\text{relay lens group}\\
+    &\text{sensor}
+ \end{align*}\right.
+    $$
+
+- **PAL block**：基于折反射原理，将360°视场的光线折反射为小角度光线进入中继透镜组、
+- **relay lens group**：通过提供正的光焦度，校正不同视场光线存在的像差。
+
+### 等距投影模型
+
+&emsp;&emsp; 在日常的生活中，当观察同一目标时，距离近的时候会比距离远的时候看起来更大，即呈现出近大远小的特点，仿佛一个三维立体空间就出现在我们眼前，这与光 学透视原理有关。而当人们想用一幅画来描述三维空间的景物时，需要把三维空间压缩到一个二维平面上，人们就需要模仿这一现象，将远处的物体画的小一些，近处的物体画的大一些,并且随着距离的不断增大直至无穷远处，观察到的像会慢慢会聚直至消失。
+
+[![中心投影法示意图](https://free.picui.cn/free/2025/10/20/68f593dc90e05.png)](https://free.picui.cn/free/2025/10/20/68f593dc90e05.png)
+
+&emsp;&emsp;如上图所示，这种将三维立体图像投影到二维平面上的方法称为**中心投影法CCP（Central Convergence Perspective）**，景物慢慢汇聚直到消失于某点，该点即为灭点，灭点所在直线即为通常所说的地平线。虽然传统的成像系统均是按照中心投影法制成，**但是当视场角大于90°的超广角系统成像时，虽然较大视场范围内的景物可以参与成像，但会出现像面扭曲的情况，尤其在图像边缘处，参考鱼眼透镜。** 如果一个光学系统的成像结果出现严重的变形以及扭曲，在该图像上对目标行为进行特征分析（如目标检测、跟踪等等）具有很大的难度。**遵循中心投影法则的光学系统通常时确保中心前方视场范围内成像效果良好，边缘图像质量则通常被忽略。**
+
+&emsp;&emsp;从上述分析不难看出，中心投影法已经不再适用于超广角系统成像，为解决上述问题，人们提出了平面-圆柱投影法（FCP，Flat Cylinder Perspective），它是以光学系统光轴为中心旋转轴，将旋转得到的360°圆柱视场投影到二维平面的一个环形区域内。
+
+[![平面圆柱投影法示意图](https://free.picui.cn/free/2025/10/20/68f597aa48be0.png)](https://free.picui.cn/free/2025/10/20/68f597aa48be0.png)
+
+&emsp;&emsp;其中$\alpha$区域绕轴旋转360°的区域参与成像，其图像投影在二维平面的环形区域上；而$2\beta$锥角区域则由于盲区存在无法参与成像，其对应于二维圆环中心圆形盲区。
+
+[![全景环带光学系统成像光路图](https://free.picui.cn/free/2025/10/20/68f598a3889bf.png)](https://free.picui.cn/free/2025/10/20/68f598a3889bf.png)
+
+&emsp;&emsp;全景头部单元包含折射面1、反射面2、反射面3和折射面4。**物平面的一点发出的光线通过两个反射面的反射和两个折射面的折射后，在全景头部单元的内部或前方形成虚像，该虚像再经过中继透镜组的二次成像最终在图像传感器的像面上得到具有合适放大倍率、合适位置的实像。** 观察全部成像过程可以发现，虽然物点发出的光线一开始进入全景头部单元时，与光轴的夹角较大，但是经过反射面的反射和折射面的折射后，光线和光轴的夹角明显变小，使其以一个较小角度的光线进入中继透镜组。由于中继透镜组是对小角度的光线成像，其像差校正难度大幅度降低。因此，对于全景环带成像系统的前后两部分来说，各自承担着不同的责任：
+- 头部单元负责将大视场传来的光线转折变成小角度的光线射出。
+- 中继透镜组则是承担将头部单元形成的中间虚像进行二次成像转化为实像的任务，并且还需要校正头部单元的残余像差和自身像差。
 
 ## 全景环带光学系统设计的挑战及其发展方向
 
