--- a/posts/2026/近现代光学系统设计概论第4章1-双胶合消色差物镜.md
+++ b/posts/2026/近现代光学系统设计概论第4章1-双胶合消色差物镜.md
@@ -7,7 +7,7 @@ description: 本笔记参考 《近现代光学系统设计概论》
 articleGPT: 本章主要介绍双胶合消色差物镜的设计方法，从理论推导到结构特点，从初始结构到像质评价，最后介绍优化策略-相关评价函数的设置，从而完成符合相应指标的双胶合消色差物镜。
 references:
   - title: 《近现代光学系统设计概论》
-  - url: [https://ebooks.spiedigitallibrary.org/ebooks/PM/designing-optics-using-zemax-opticstudio/eISBN-9781510668577/10.1117/3.100004](https://book.sciencereading.cn/shop/book/Booksimple/show.do?id=B20438EE211D6A69EE063020B0A0A7879000)
+  - url: https://book.sciencereading.cn/shop/book/Booksimple/show.do?id=B20438EE211D6A69EE063020B0A0A7879000
    
 ---
 
